pms/lecturesPlusTutorials/week4.virtualFns.fnOverloading/proj/output.shapePtr=rectanclePtr
[ 16%] Building CXX object CMakeFiles/shapeFns.dir/main.cpp.o
/lu1/smagri/uni/subj/pms/lecturesPlusTutorials/week4/proj/main.cpp: In function ‘int main(int, char**)’:
/lu1/smagri/uni/subj/pms/lecturesPlusTutorials/week4/proj/main.cpp:46:18: error: ‘Shape’ is an inaccessible base of ‘Rectangle’
   shape_array[0] = &r1;
                  ^
CMakeFiles/shapeFns.dir/build.make:158: recipe for target 'CMakeFiles/shapeFns.dir/main.cpp.o' failed
make[2]: *** [CMakeFiles/shapeFns.dir/main.cpp.o] Error 1
CMakeFiles/Makefile2:67: recipe for target 'CMakeFiles/shapeFns.dir/all' failed
make[1]: *** [CMakeFiles/shapeFns.dir/all] Error 2
Makefile:83: recipe for target 'all' failed
make: *** [all] Error 2
